tests/cases/compiler-development/artifact/errors/diagnostic-if-expression-type-mismatch.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected i64, got bool" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/control-flow/errors/if-expression-type-mismatch.ari" display="tests/cases/control-flow/errors/if-expression-type-mismatch.ari" bytes=81
  Label index=0 role=primary source_id=0 source="tests/cases/control-flow/errors/if-expression-type-mismatch.ari" line=2 column=36 end_line=2 end_column=41 byte_start=54 byte_end=59 message=""
  Snippet label=0 text="  --> tests/cases/control-flow/errors/if-expression-type-mismatch.ari:2:36\n   |\n 2 |   let value = if true { 1 } else { false };\n   |                                    ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/control-flow/errors/if-expression-type-mismatch.ari" line=2 column=25 end_line=2 end_column=26 byte_start=43 byte_end=44 message="then arm establishes result type i64"
  Snippet label=1 text="  --> tests/cases/control-flow/errors/if-expression-type-mismatch.ari:2:25\n   |\n 2 |   let value = if true { 1 } else { false };\n   |                         ^"
  Note index=0 location=none message="if expression results must produce one common type after expression coercions"
  Help index=0 location=none message="make this result produce i64 or change the expected if expression result type"
